# iris-plus

./: .gitignore  README.md  config.toml  environment.yml  pyproject.toml  tobert.py
src/iris/: __main__.py  config.py  data.py  database.py  dataset.py  evaluate.py  loss.py  model.py  train.py  tune.py
src/llm_pipeline/: agent.ipynb
src/ragifier/: __main__.py  config.py  data.py  database.py  dataset.py  embed.py  encode.py  evaluate.py  loss.py  model.py  train.py  tune.py
src/rassifier/: __main__.py  config.py  data.py  database.py  dataset.py  encode.py  evaluate.py  loss.py  model.py  train.py  tune.py
