[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragifier"
version = "0.0.1"
authors = [
  { name="Fengnan Li", email="fengnan.li@duke.edu" },
]
description = "Efficient retrieval augmented generation (RAG) classification"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/fengnanli-neo/ragifier"
Issues = "https://github.com/fengnanli-neo/ragifier/issues"