[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rassifier"
version = "0.0.1"
authors = [
  { name = "Elliot Hill", email = "elliot.douglas.hill@gmail.com" },
  { name = "Fengnan Li", email = "fengnan.li@duke.edu" },
]
description = "Efficient infinite context retrieval-based classification"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Elliot-D-Hill/rassifier"
Issues = "https://github.com/Elliot-D-Hill/rassifier/issues"
